fixing sonar critical issues, adding some logging fixes #107